--- a/backend/config/default.yml
+++ b/backend/config/default.yml
@@ -1,3 +1,10 @@
 server:
   host: 127.0.0.1
   port: 3000
+openapi:
+  title: TruckManager
+  description:
+  version: 1.0
+  tags:
+    - Truck
+  path: docs
