--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,6 @@
-ARG NODE_VERSION
+ARG NODE_VERSION=lts
 
-FROM node:$NODE_VERSION-alpine
+FROM node:${NODE_VERSION}-alpine
 
 ENV WAIT_VERSION="2.7.2"
 
