--- a/backend/docker-compose.yml.dist
+++ b/backend/docker-compose.yml.dist
@@ -6,8 +6,8 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        NODE_VERSION: 'lts'
-    restart: on-failure
+        NODE_VERSION: lts
+    restart: unless-stopped
     depends_on:
       - mongo
     ports:
@@ -19,9 +19,7 @@ services:
       WAIT_HOST_CONNECT_TIMEOUT: 5
   mongo:
     image: mongo
-    restart: always
-    ports:
-      - "27017:27017"
+    restart: unless-stopped
     environment:
       MONGO_INITDB_ROOT_USERNAME: root # TODO: change this
       MONGO_INITDB_ROOT_PASSWORD: motdepasse # TODO: change this
