--- a/backend/config/default.yml
+++ b/backend/config/default.yml
@@ -11,7 +11,9 @@ openapi:
 mongodb:
   uri: "mongodb://root:motdepasse@0.0.0.0:27017/truckManager?authSource=admin"
 cors:
-  origin: "http://localhost:4200"
+  origin:
+    - http://localhost:4200 # Angular frontend dev
+    - http://localhost:4000 # Angular frontend prod
   methods: "GET,POST,PUT,DELETE,OPTIONS,HEAD"
   allowedHeaders: "Content-Type, Accept"
   exposedHeaders: "Location"
