--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,5 +1,9 @@
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
+# docker-compose files
+docker-compose.*
+!docker-compose.*.dist
+
 # Compiled output
 /dist
 /tmp
