--- a/backend/config/default.yml
+++ b/backend/config/default.yml
@@ -10,6 +10,8 @@ openapi:
   path: docs
 mongodb:
   uri: "mongodb://root:motdepasse@0.0.0.0:27017/truckManager?authSource=admin"
+initData:
+  enabled: ifEmpty # true, false, ifEmpty
 cors:
   origin:
     - http://localhost:4200 # Angular frontend dev
